--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "jose": "^5.1.3",
     "mongoose": "^8.0.3",
     "next": "14.0.4",
     "react": "^18",
