--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18"
+  },
+  "devDependencies": {
+    "prettier": "^3.1.1"
   }
 }
